--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
+       <!-- Start project -->
+       <!-- Start header -->
         <div class="part1">
             <div class="container">
                 <div class="row">
@@ -19,6 +21,7 @@
                         <span class="text2">Календарь</span>
                     </div>
                     <div class="navigation col-md-6">
+                      <!-- Navigation menu -->
                        <nav class="main-menu">
                             <ul class="menu">
                                 <li>
@@ -88,6 +91,7 @@
                                 </li>
                             </ul>
                         </nav>
+                        <!-- End navision menu -->
                     </div>
                     <div class="icon col-md-2">
                         <div class="icons3">
@@ -104,8 +108,9 @@
                     </div>
                 </div>
             </div>
-
+            <!-- End header -->
             <hr/>
+            <!-- First section news -->
             <div class="gallery">
                 <div class="row">
                     <div class="icon1 col-md-4"><img alt="img" src="img/ico1.png"></div>
@@ -126,6 +131,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Second section news -->
             <div class="advertising">
                 <img alt="" src="img/ico13.png"></div>
             <div class="gallery2">
@@ -165,6 +171,7 @@
                 </div>
             </div>
         </div>
+        <!-- Section Event & Job -->
         <section class="job">
             <div class="row">
                 <div class="down col-md-4 col-md-offset-2 ">Работа</div>
@@ -221,6 +228,7 @@
                 </div>
             </div>
         </section>
+        <!-- Third section news-->
         <div class="section3">
             <div class="row">
                 <div class="i col-md-3"><img alt="img" src="img/z7.png">
@@ -255,6 +263,7 @@
                 </div>
             </div>
         </div>
+        <!-- Footer Section -->
         <footer class="navbar-fixed-bottom" id="footer">
             <div class="section1">
                 <div class="row">
@@ -321,5 +330,6 @@
                 </div>
             </div>
         </footer>
+        <!-- End Project -->
     </body>
 </html>
