--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <b class="tyu">Sales Manager @Semalt</b>
                 </div>
                 <div class="slit col-md-4 col-md-offset-2"><img alt="img" src="img/o3.png">
-                    <b class="tyu">Лекция Анрея Томашевского:"Фриланс в Украине"</b>
+                    <b class="tyu">Лекция Анрея Томашевского:"Фриланс"</b>
                 </div>
             </div>
 
