fixed word in commit

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 </li>
                             </ul>
                         </nav>
-                        <!-- End navision menu -->
+                        <!-- End navigation menu -->
                     </div>
                     <div class="icon col-md-2">
                         <div class="icons3">
