added new link and animation on js

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>TeamHomrwork</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/normalize.css" rel="stylesheet">
         <link href="css/bootstrap-grid-3.3.2.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
@@ -262,6 +263,12 @@
                     <p class="gal1">Readdle выходит на рынок Японии</p>
                 </div>
             </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <img id ="man" src="img/educ.png" alt="img">
+            <img src="img/ert_120x205.png" alt="img">
+         </div>
         </div>
         <!-- Footer Section -->
         <footer class="navbar-fixed-bottom" id="footer">
