added  block div + img

--- a/index.html
+++ b/index.html
@@ -270,6 +270,10 @@
             <img src="img/ert_120x205.png" alt="img">
          </div>
         </div>
+        <div class="row">
+          <span id="text">Click to Car</span>
+          <img id ="car" src="img/car.jpg" alt="img">
+        </div>
         <!-- Footer Section -->
         <footer class="navbar-fixed-bottom" id="footer">
             <div class="section1">
